# ChangeLog for dev-libs/libxml2
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.84 2004/07/13 10:49:00 obz Exp $

*libxml2-2.6.11 (13 Jul 2004)

  13 Jul 2004; Mike Gardiner <obz@gentoo.org> +libxml2-2.6.11.ebuild:
  New version, as requested in bug #56875

  23 Jun 2004; Aron Griffis <agriffis@gentoo.org> libxml2-2.6.7.ebuild:
  Stable on alpha and ia64

  19 Jun 2004; Tom Gall <tgall@gentoo.org> libxml2-2.6.9.ebuild:
  stable on ppc64, bug #54140

  13 May 2004; Stephen P. Becker <geoman@gentoo.org> libxml2-2.6.7.ebuild:
  Stable on mips.

  02 May 2004; Michael McCabe <randy@gentoo.org> libxml2-2.6.9.ebuild:
  Added s390 keywords

  27 Apr 2004; Gustavo Zacarias <gustavoz@gentoo.org> libxml2-2.6.7.ebuild:
  Stable on sparc

*libxml2-2.6.9 (25 Apr 2004)

  25 Apr 2004; foser <foser@gentoo.org> libxml2-2.6.9.ebuild :
  New release

*libxml2-2.6.7 (07 Mar 2004)

  07 Mar 2004; foser <foser@gentoo.org> libxml2-2.6.7.ebuild :
  New release

  24 Feb 2004; Christian Birchinger <joker@gentoo.org> libxml2-2.6.6.ebuild:
  Marked stable on all archs. Security update for Bug #42735

  17 Feb 2004; Joshua Kinard <kumba@gentoo.org> libxml2-2.6.6.ebuild:
  Added ~mips to keywords.

*libxml2-2.6.6 (14 Feb 2004)

  14 Feb 2004; Alastair Tse <liquidx@gentoo.org> libxml2-2.6.6.ebuild:
  version bump

  10 Feb 2004; Bartosch Pixa <darkspecter@gentoo.org> libxml2-2.6.4.ebuild:
  set ppc in keywords

  09 Feb 2004; <gustavoz@gentoo.org> libxml2-2.6.4.ebuild:
  stable on hppa, again...

  09 Feb 2004; <gustavoz@gentoo.org> libxml2-2.6.4.ebuild:
  stable on hppa and sparc

  08 Feb 2004; <spider@gentoo.org> libxml2-2.6.4.ebuild:
  x86 stable

  28 Jan 2004; Aron Griffis <agriffis@gentoo.org> libxml2-2.6.3.ebuild:
  stable on alpha and ia64

  18 Jan 2004; <tuxus@gentoo.org> libxml2-2.5.11.ebuild:
  Added ~mips to KEYWORDS.

  13 Jan 2004; <gustavoz@gentoo.org> libxml2-2.6.3.ebuild: