@@ -1,8 +1,8 @@
-MD5 d49dcafc4fbc1cc8ab001e3806bab2d3 libxml2-2.6.7.ebuild 1825
-MD5 64b78fa3d1fdcd444fa7d8c9e7d9f6c4 libxml2-2.6.11.ebuild 1604
-MD5 87a974587fedb864bbc99894f5fd75cf libxml2-2.6.9.ebuild 1887
-MD5 3da6f132211d553b6baf9fa6e0b4ee82 libxml2-2.6.6.ebuild 1830
-MD5 157c1d70243d68da3695d8deaa16b759 ChangeLog 10052
+MD5 5900215d6556e3e2aa098da214f3f302 libxml2-2.6.7.ebuild 1887
+MD5 89d43fc79a85de293293ab2cb51fae4a libxml2-2.6.11.ebuild 1670
+MD5 086f5dd9238430853ec8bfc5d82b47c4 libxml2-2.6.9.ebuild 1948
+MD5 061ed0a973802c6fb336bb082375a650 libxml2-2.6.6.ebuild 1891
+MD5 270b38cc98e7c30f22a055e5682f6b15 ChangeLog 10268
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 df8aa422d2ef75d0fbb2dfd7e3691d2c files/digest-libxml2-2.6.6 67
 MD5 e1d3673ddc47844934e0894da13d7c31 files/digest-libxml2-2.6.7 67
